--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,3 +16,18 @@ body {
     }
 }
 
+#showcase {
+    position: relative;
+    background: url('../img/mountains.jpg');
+    min-height: 600px;
+
+    .primary-overlay {
+        background: $primary-overlay;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        
+    }
+}
