added in newsletter boxes

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,3 +31,33 @@ body {
         
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media(max-width: 768px) {
+    #showcase {
+        min-height: 500px;
+
+        h1 {
+            font-size: 4rem;
+        }
+    }
+
+    .mb-resp {
+        margin-bottom: 1rem;
+    }
+}
